--- a/src/app/modules/services/components/user-experience/user-experience.component.html
+++ b/src/app/modules/services/components/user-experience/user-experience.component.html
@@ -67,25 +67,46 @@
                   <li ngbNavItem="discovery">
                     <a ngbNavLink><img src="./assets/images/services/icon7.svg">Discovery</a>
                     <ng-template ngbNavContent>
-                      <p>Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko </p>
+                    <h2>Discovering User Needs</h2>
+                      <p>We funnel the requirements from the Stakeholders, Business Team and the End-Users - align according to the Vision of the Product. It takes a series of process to get the inference from the Research Data. Based on the inputs gleaned from the extensive research and analysis we plot the Journey Maps & Persona. This allowing us to Empathise with the end-users bringing value to the Design Strategy.</p>
+                      <p>The Divergent & Convergent Thinking Process aims to unearth the innovative solutions and to nail the needs & challenges of the end-users & the business.</p>
+                      <div class="li">1. User Research</div>
+                      <div class="li">2. User Persona</div>
+                      <div class="li">3. Users Journey Map</div>
+                      <div class="li">4. Root Cause Analysis</div>
                     </ng-template>
                   </li>
                   <li ngbNavItem="solution">
                     <a ngbNavLink><img src="./assets/images/services/icon8.svg">Solution</a>
                     <ng-template ngbNavContent>
-                      <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi. </p>
+                      <h2>Supporting Solutions</h2>
+                      <p>We combine the research and the insights to conceptualize to build the wireframes and iterate the prototypes with the business, technical team and the consumers.</p>
+                      <div class="li">1. Conceptual Model</div>
+                      <div class="li">2. Task Flow</div>
+                      <div class="li">3. Card Sorting</div>
+                      <div class="li">4. Information Architecture</div>
                     </ng-template>
                   </li>
                   <li ngbNavItem="test">
                     <a ngbNavLink><img src="./assets/images/services/icon9.svg">Test</a>
                     <ng-template ngbNavContent>
-                      <p>Testing, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi. </p>
+                        <h2>Test Feature Viability</h2>
+                        <p>We value your time & effort, we employ Early Testing to avoid rework due to mismatch between the users/market needs. We design Visual Prototype and test in multiple stages. Iterate design based on the feedback avoiding changes during the product development or even worse after market launch which could be very expensive for the business.</p>
+                        <div class="li">1. Low Fidelity Wireframe</div>
+                        <div class="li">2. High Fidelity Wireframe</div>
+                        <div class="li">3. Clickable Prototyping</div>
+                        <div class="li">4. Iteration</div>
                     </ng-template>
                   </li>
                   <li ngbNavItem="launch">
                     <a ngbNavLink><img src="./assets/images/services/icon10.svg">Launch</a>
                     <ng-template ngbNavContent>
-                      <p>Launch, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi. </p>
+                        <h2>Market Launch</h2>
+                        <p>With multiple iterations and checkpoints at various stages we ensure the prototype is ready for hassle freemarket development and market launch.</p>
+                        <div class="li">1. Web Analytics</div>
+                        <div class="li">2. Conversion Funnel</div>
+                        <div class="li">3. Customer Feedback</div>
+                        <div class="li">4. Sprint Iteration</div>
                     </ng-template>
                   </li>
                 </ul>
