--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -1,10 +1,9 @@
 .services{
     padding: 50px 0px;
 .banner{
-    background-image: url('/assets/images/bg.png');
+    background-image: url('/assets/images/bg2.png');
     background-repeat: no-repeat;
     background-size: cover;
-    top: -51px;
     position: relative;
     h1{
         font-size: 56px;
@@ -19,7 +18,6 @@
     }
 }
 .service-layout1{
-    margin-top: -51px;
     .row{
         margin-left: 0px !important;
         margin-right: 0px !important;
@@ -81,9 +79,13 @@
         font-size: 56px;
     }
     p{
-        font-size: 24px;
-        line-height: 40px;
+        font-size: 20px;
+        line-height: 30px;
         margin-top: 40px;
+    }
+    .li{
+        font-size: 20px;
+        margin-top: 6px;
     }
 }
 }
