--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,9 +1,11 @@
 <div class="blogs">
+    <div class="banner">
 <div class="container">
     <div class="blog-layout1">
             <h1>MINTify your thoughts <span> with <br> our latest blogs and articles</span> </h1>
             <h6>For more blogs like this checkout our <span>Medium</span></h6>
     </div>
+</div>
 </div>
     <div class="blog-layout2">
         <div class="container">
