--- a/src/app/components/engagement-models/engagement-models.component.html
+++ b/src/app/components/engagement-models/engagement-models.component.html
@@ -1,1 +1,240 @@
-<p>engagement-models works!</p>
+<div class="engagement">
+   <div class="banner">
+    <div class="container">
+       <div class="engagement-layout">
+          <h1>Our <span>engagement models <br></span> that meet different project needs </h1>
+          <h6> <span> Check to understand</span>    What suites you the best </h6>
+       </div>
+    </div>
+ </div>
+</div>
+ <div class="engagement-layout1">
+    <div class="container">
+       <ul ngbNav #nav="ngbNav" class="nav-tabs">
+          <li ngbNavItem>
+             <ng-template ngbNavContent>
+                <div class="row">
+                   <div class="col-md-6 design-left">
+                      <h2>Fixed Bid</h2>
+                      <p>The fixed bid model suites best for projects with defined scope and defined requirement specification.
+                         The timeline and effort can be estimated based on the scope or work.
+                         Any changes or enhancements not part of the scope would be taken as
+                         part of Change Requests with separate estimates. 
+                      </p>
+                   </div>
+                   <div class="col-md-6 design-right">
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-7.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Clear scope definition and documented requirements</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-8.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Fits for small and medium projects</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-9.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p> Cost efficient for small projects with limited budget</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-10.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Clear scope definition and documented requirements</p>
+                            </div>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+             </ng-template>
+             <a ngbNavLink>Fixed Bid</a>
+          </li>
+          <li ngbNavItem>
+             <ng-template ngbNavContent>
+                <div class="row">
+                   <div class="col-md-6 design-left">
+                      <h2>Time & Material</h2>
+                      <p>The time & material model are cost efficient for complex projects that are dynamic this suites best.
+                         Our team is flexible to handle changes and accommodate the product needs.
+                         The cost is billed based on the total team effort in hours involved in the project.
+                         The billing is done on monthly basis. 
+                      </p>
+                   </div>
+                   <div class="col-md-6 design-right">
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-7.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Highly suitable for product driven design and enterprise projects</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-8.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Allows better flexibility for changing design directions</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-9.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p> Transparent billing and full control over time and budget</p>
+                            </div>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+             </ng-template>
+             <a ngbNavLink>Time & Material</a>
+          </li>
+          <li ngbNavItem>
+             <ng-template ngbNavContent>
+                <div class="row">
+                   <div class="col-md-6 design-left">
+                      <h2>Dedicated Team Model</h2>
+                      <p>Want our design team to join force with the internal business & development? We are in! This works best for
+                         long term complex and consistent projects that demand design team to understand the
+                         domain and work inline with the business team. 
+                      </p>
+                   </div>
+                   <div class="col-md-6 design-right">
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-7.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Skilled and experienced design team</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-8.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Reduces in-house cost on hiring skilled resources</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-9.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p> Team be scaled-up with very less notice</p>
+                            </div>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+             </ng-template>
+             <a ngbNavLink>Dedicated Team Model</a>
+          </li>
+          <li ngbNavItem>
+             <ng-template ngbNavContent>
+                <div class="row">
+                   <div class="col-md-6 design-left">
+                      <h2>Staff Augmentation Model</h2>
+                      <p>Need to leverage your existing design team? Our design experts can loop in to design along with your internal team.
+                         This work best when there is need for business to ramp up without much of time to train new hires.
+                         The billing can be done on monthly basis. 
+                      </p>
+                   </div>
+                   <div class="col-md-6 design-right">
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-7.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Reduces time to hire and train</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-8.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p>Skilled and experienced designers</p>
+                            </div>
+                         </div>
+                      </div>
+                      <div class="row logo-image">
+                         <div class="col-md-2">
+                            <div class="logo-images">
+                               <img src="./assets/images/services/logo-9.svg">
+                            </div>
+                         </div>
+                         <div class="col-md-8">
+                            <div class="logo-images">
+                               <p> Reduces in-house cost on hiring full-time resources</p>
+                            </div>
+                         </div>
+                      </div>
+                   </div>
+                </div>
+             </ng-template>
+             <a ngbNavLink>Staff Augmentation Model</a>
+          </li>
+          <li ngbNavItem></li>
+       </ul>
+       <div [ngbNavOutlet]="nav"></div>
+    </div>
+ </div>
