--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,5 @@ body { margin: 0; font-family: 'Inter'; }
 .text-center{
     text-align: center;
 }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
