--- a/src/app/modules/services/components/user-experience/user-experience.component.html
+++ b/src/app/modules/services/components/user-experience/user-experience.component.html
@@ -57,7 +57,15 @@
             <div class="d-flex">
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
                   <li ngbNavItem="discussion">
-                    <a ngbNavLink><img src="./assets/images/services/icon6.svg">Discussion</a>
+                    <a ngbNavLink><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                        <g id="Group_6453" data-name="Group 6453" transform="translate(-9286 -661)">
+                        <g id="Group_6448" data-name="Group 6448" transform="translate(9150.591 -3158.732)">
+                        <path id="Path_9471" data-name="Path 9471" d="M1057.03,13422.9v-5.122h-17.621V13435l3.818-4.322h2.081" transform="translate(-896 -9590)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                        <path id="Path_9472" data-name="Path 9472" d="M1057.03,13434v-17.223h-17.621v12.9h13.262Z" transform="translate(-890 -9583)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                        </g>
+                        <rect id="Rectangle_4822" data-name="Rectangle 4822" width="40" height="40" transform="translate(9286 661)" fill="none" opacity="0"/>
+                        </g>
+                       </svg>Discussion</a>
                     <ng-template ngbNavContent>
                       <h2>Stake Holder Discussion</h2>
                       <p>We start our requirements gathering from the pillars of the business; the Product Owners, Business SME, CEO/CTO to get their perspectives, needs & current process issues that they encounter and the potential areas of improvement. Based on the inputs we define the features and the scope.</p>
@@ -65,7 +73,17 @@
                     </ng-template>
                   </li>
                   <li ngbNavItem="discovery">
-                    <a ngbNavLink><img src="./assets/images/services/icon7.svg">Discovery</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6450" data-name="Group 6450" transform="translate(-9187 -638)" opacity="0.8">
+                              <g id="Icon_feather-search" data-name="Icon feather-search" transform="translate(9190.5 641.5)">
+                                <path id="Path_9469" data-name="Path 9469" d="M25.537,15.019A10.519,10.519,0,1,1,15.018,4.5,10.519,10.519,0,0,1,25.537,15.019Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <path id="Path_9470" data-name="Path 9470" d="M30.695,30.695l-5.72-5.72" transform="translate(-2.528 -2.528)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                              </g>
+                              <rect id="Rectangle_4823" data-name="Rectangle 4823" width="40" height="40" transform="translate(9187 638)" fill="none" opacity="0"/>
+                            </g>
+                          </svg>                          
+                        Discovery</a>
                     <ng-template ngbNavContent>
                     <h2>Discovering User Needs</h2>
                       <p>We funnel the requirements from the Stakeholders, Business Team and the End-Users - align according to the Vision of the Product. It takes a series of process to get the inference from the Research Data. Based on the inputs gleaned from the extensive research and analysis we plot the Journey Maps & Persona. This allowing us to Empathise with the end-users bringing value to the Design Strategy.</p>
@@ -77,7 +95,17 @@
                     </ng-template>
                   </li>
                   <li ngbNavItem="solution">
-                    <a ngbNavLink><img src="./assets/images/services/icon8.svg">Solution</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6452" data-name="Group 6452" transform="translate(-9109 -530)" opacity="0.8">
+                              <g id="Group_6449" data-name="Group 6449" transform="translate(8477.5 -3289.999)">
+                                <line id="Line_114" data-name="Line 114" x2="6" transform="translate(648.5 3853.5)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                                <path id="Union_3" data-name="Union 3" d="M-877.5-9559v-5.066A10,10,0,0,1-883-9573a10,10,0,0,1,10-10,10,10,0,0,1,10,10,10,10,0,0,1-5.5,8.934l0,5.066Z" transform="translate(1524.499 13409)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                              </g>
+                              <rect id="Rectangle_4825" data-name="Rectangle 4825" width="40" height="40" transform="translate(9109 530)" fill="none" opacity="0"/>
+                            </g>
+                          </svg>                          
+                        Solution</a>
                     <ng-template ngbNavContent>
                       <h2>Supporting Solutions</h2>
                       <p>We combine the research and the insights to conceptualize to build the wireframes and iterate the prototypes with the business, technical team and the consumers.</p>
@@ -88,7 +116,18 @@
                     </ng-template>
                   </li>
                   <li ngbNavItem="test">
-                    <a ngbNavLink><img src="./assets/images/services/icon9.svg">Test</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6455" data-name="Group 6455" transform="translate(-9487 -503)" opacity="0.8">
+                              <g id="Icon_feather-smartphone" data-name="Icon feather-smartphone" transform="translate(9491.5 508)">
+                                <path id="Path_9474" data-name="Path 9474" d="M9.884,3H21.8a2.384,2.384,0,0,1,2.384,2.384V24.455A2.384,2.384,0,0,1,21.8,26.839H9.884A2.384,2.384,0,0,1,7.5,24.455V5.384A2.384,2.384,0,0,1,9.884,3Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <path id="Path_9475" data-name="Path 9475" d="M18,27h4.49" transform="translate(-4.156 -3.929)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <path id="Path_9476" data-name="Path 9476" d="M11.23,13.709l2.37,2.368,5.156-5.156" transform="translate(0.85 -0.103)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                              </g>
+                              <rect id="Rectangle_4830" data-name="Rectangle 4830" width="40" height="40" transform="translate(9487 503)" fill="none" opacity="0"/>
+                            </g>
+                          </svg>                          
+                        Test</a>
                     <ng-template ngbNavContent>
                         <h2>Test Feature Viability</h2>
                         <p>We value your time & effort, we employ Early Testing to avoid rework due to mismatch between the users/market needs. We design Visual Prototype and test in multiple stages. Iterate design based on the feedback avoiding changes during the product development or even worse after market launch which could be very expensive for the business.</p>
@@ -99,7 +138,19 @@
                     </ng-template>
                   </li>
                   <li ngbNavItem="launch">
-                    <a ngbNavLink><img src="./assets/images/services/icon10.svg">Launch</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+                            <g id="Group_6507" data-name="Group 6507" transform="translate(-9525 -718)" opacity="0.8">
+                              <rect id="Rectangle_4836" data-name="Rectangle 4836" width="40" height="40" transform="translate(9525 718)" fill="#fff" opacity="0"/>
+                              <g id="Group_6506" data-name="Group 6506" transform="translate(8475.262 -3007.718)">
+                                <path id="Union_4" data-name="Union 4" d="M-883-9568.95l7.459.818,10.186-10.187,7.924-1.44-1.378,7.986L-869-9561.58l.819,7.456Z" transform="translate(1940.51 13311.476)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
+                                <line id="Line_115" data-name="Line 115" y2="3.704" transform="translate(1058.357 3749.955) rotate(45)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                                <line id="Line_116" data-name="Line 116" y2="3.704" transform="translate(1064.904 3756.502) rotate(45)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                                <line id="Line_117" data-name="Line 117" y2="6.481" transform="translate(1061.631 3753.229) rotate(45)" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2"/>
+                              </g>
+                            </g>
+                          </svg>                          
+                        Launch</a>
                     <ng-template ngbNavContent>
                         <h2>Market Launch</h2>
                         <p>With multiple iterations and checkpoints at various stages we ensure the prototype is ready for hassle freemarket development and market launch.</p>
