--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -57,7 +57,9 @@
             <div class="d-flex">
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
                   <li ngbNavItem="discussion">
-                    <a ngbNavLink><img src="./assets/images/services/icon6.svg">Controlled</a>
+                    <a ngbNavLink>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><defs><style>.cls-1{fill:none;fill-opacity:0;}.cls-2{fill:none;stroke:currentColor;stroke-width:3px;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><g id="Group_6480" data-name="Group 6480"><rect id="Rectangle_4835" data-name="Rectangle 4835" class="cls-1" width="48" height="48"/><path id="Icon_awesome-user-alt" data-name="Icon awesome-user-alt" class="cls-2" d="M23.5,27.56a11,11,0,1,0-11-11,11,11,0,0,0,11,11Zm9.75-.81h-4.2a13.23,13.23,0,0,1-11.11,0H13.75A9.76,9.76,0,0,0,4,36.5v1.22a3.67,3.67,0,0,0,3.66,3.66H39.34A3.67,3.67,0,0,0,43,37.72V36.5a9.76,9.76,0,0,0-9.75-9.75Z"/></g></g></g></svg>
+                        Controlled</a>
                     <ng-template ngbNavContent>
                       <h2>Controlled Environment Testing</h2>
                       <p>A controlled environment testing session is moderated in person or remotely by a trained researcher; who walks through the tasks to participants, answers their queries, and asks follow-up questions. Conversely, an uncontrolled test is done without direct supervision; participants might be in a lab, but it's more likely they are in their own homes and/or using their own devices to browse the website that is being tested. But they can also be unobtrusively monitored by the researcher.</p>
